src/nl/cwi/swat/liveql/parser/antlr/QLParser.java
// $ANTLR 3.4 /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g 2013-02-11 16:02:42

package nl.cwi.swat.liveql.parser.antlr;
import nl.cwi.swat.liveql.ast.expr.*;
import nl.cwi.swat.liveql.ast.stat.*;
import nl.cwi.swat.liveql.ast.form.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class QLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "Ident", "Int", "Str", "WS", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "'-'", "'/'", "':'", "'<'", "'<='", "'=='", "'>'", "'>='", "'bool'", "'else'", "'false'", "'form'", "'if'", "'int'", "'str'", "'true'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int COMMENT=4;
    public static final int Ident=5;
    public static final int Int=6;
    public static final int Str=7;
    public static final int WS=8;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public QLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public QLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[40+1];
         

    }

    public String[] getTokenNames() { return QLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g"; }


        @Override
        public void reportError(RecognitionException e) {
            throw new RuntimeException(e);
        }



    // $ANTLR start "form"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:25:1: form returns [Form result] : 'form' Ident body= block ;
    public final Form form() throws RecognitionException {
        Form result = null;

        int form_StartIndex = input.index();

        Token Ident1=null;
        Block body =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:26:3: ( 'form' Ident body= block )
            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:26:5: 'form' Ident body= block
            {
            match(input,27,FOLLOW_27_in_form56); if (state.failed) return result;

            Ident1=(Token)match(input,Ident,FOLLOW_Ident_in_form58); if (state.failed) return result;

            pushFollow(FOLLOW_block_in_form62);
            body=block();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result = new Form(new Ident((Ident1!=null?Ident1.getText():null), Ident1.getLine()), body); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, form_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "form"



    // $ANTLR start "block"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:29:1: block returns [Block result] : t= '{' (s= stat )* '}' ;
    public final Block block() throws RecognitionException {
        Block result = null;

        int block_StartIndex = input.index();

        Token t=null;
        Stat s =null;


         List<Stat> stats = new ArrayList<Stat>(); 
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:3: (t= '{' (s= stat )* '}' )
            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:5: t= '{' (s= stat )* '}'
            {
            t=(Token)match(input,32,FOLLOW_32_in_block90); if (state.failed) return result;

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:11: (s= stat )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Str||LA1_0==28||LA1_0==32) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:31:13: s= stat
            	    {
            	    pushFollow(FOLLOW_stat_in_block96);
            	    s=stat();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { stats.add(s); }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,34,FOLLOW_34_in_block103); if (state.failed) return result;

            if ( state.backtracking==0 ) { result = new Block(stats, t.getLine()); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, block_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "block"



    // $ANTLR start "stat"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:34:1: stat returns [Stat result] : ( 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat | 'if' '(' c= orExpr ')' tru= stat |b= block |l= label name= Ident ':' t= type '(' e= orExpr ')' |l= label name= Ident ':' t= type );
    public final Stat stat() throws RecognitionException {
        Stat result = null;

        int stat_StartIndex = input.index();

        Token name=null;
        Expr c =null;

        Stat tru =null;

        Stat fls =null;

        Block b =null;

        Label l =null;

        nl.cwi.swat.liveql.ast.types.Type t =null;

        Expr e =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:35:3: ( 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat | 'if' '(' c= orExpr ')' tru= stat |b= block |l= label name= Ident ':' t= type '(' e= orExpr ')' |l= label name= Ident ':' t= type )
            int alt2=5;
            switch ( input.LA(1) ) {
            case 28:
                {
                int LA2_1 = input.LA(2);

                if ( (synpred2_QL()) ) {
                    alt2=1;
                }
                else if ( (synpred3_QL()) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
                }
                break;
            case 32:
                {
                alt2=3;
                }
                break;
            case Str:
                {
                int LA2_3 = input.LA(2);

                if ( (synpred5_QL()) ) {
                    alt2=4;
                }
                else if ( (true) ) {
                    alt2=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:35:5: 'if' '(' c= orExpr ')' tru= stat 'else' fls= stat
                    {
                    match(input,28,FOLLOW_28_in_stat124); if (state.failed) return result;

                    match(input,12,FOLLOW_12_in_stat126); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_stat130);
                    c=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,13,FOLLOW_13_in_stat132); if (state.failed) return result;

                    pushFollow(FOLLOW_stat_in_stat136);
                    tru=stat();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,25,FOLLOW_25_in_stat138); if (state.failed) return result;

                    pushFollow(FOLLOW_stat_in_stat142);
                    fls=stat();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new IfThenElse(c, tru, fls); }

                    }
                    break;
                case 2 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:36:5: 'if' '(' c= orExpr ')' tru= stat
                    {
                    match(input,28,FOLLOW_28_in_stat150); if (state.failed) return result;

                    match(input,12,FOLLOW_12_in_stat152); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_stat156);
                    c=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,13,FOLLOW_13_in_stat158); if (state.failed) return result;

                    pushFollow(FOLLOW_stat_in_stat162);
                    tru=stat();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new IfThen(c, tru); }

                    }
                    break;
                case 3 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:37:5: b= block
                    {
                    pushFollow(FOLLOW_block_in_stat172);
                    b=block();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = b; }

                    }
                    break;
                case 4 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:38:5: l= label name= Ident ':' t= type '(' e= orExpr ')'
                    {
                    pushFollow(FOLLOW_label_in_stat182);
                    l=label();

                    state._fsp--;
                    if (state.failed) return result;

                    name=(Token)match(input,Ident,FOLLOW_Ident_in_stat186); if (state.failed) return result;

                    match(input,18,FOLLOW_18_in_stat188); if (state.failed) return result;

                    pushFollow(FOLLOW_type_in_stat192);
                    t=type();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,12,FOLLOW_12_in_stat194); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_stat198);
                    e=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,13,FOLLOW_13_in_stat200); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Computed(l, new Ident((name!=null?name.getText():null), name.getLine()), t, e); }

                    }
                    break;
                case 5 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:39:5: l= label name= Ident ':' t= type
                    {
                    pushFollow(FOLLOW_label_in_stat210);
                    l=label();

                    state._fsp--;
                    if (state.failed) return result;

                    name=(Token)match(input,Ident,FOLLOW_Ident_in_stat214); if (state.failed) return result;

                    match(input,18,FOLLOW_18_in_stat216); if (state.failed) return result;

                    pushFollow(FOLLOW_type_in_stat220);
                    t=type();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Answerable(l, new Ident((name!=null?name.getText():null), name.getLine()), t); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, stat_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "stat"



    // $ANTLR start "label"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:42:1: label returns [Label result] : Str ;
    public final Label label() throws RecognitionException {
        Label result = null;

        int label_StartIndex = input.index();

        Token Str2=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:43:3: ( Str )
            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:43:5: Str
            {
            Str2=(Token)match(input,Str,FOLLOW_Str_in_label242); if (state.failed) return result;

            if ( state.backtracking==0 ) { result = new Label((Str2!=null?Str2.getText():null), Str2.getLine()); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, label_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "label"



    // $ANTLR start "type"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:46:1: type returns [nl.cwi.swat.liveql.ast.types.Type result] : (t= 'int' |t= 'str' |t= 'bool' );
    public final nl.cwi.swat.liveql.ast.types.Type type() throws RecognitionException {
        nl.cwi.swat.liveql.ast.types.Type result = null;

        int type_StartIndex = input.index();

        Token t=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:47:3: (t= 'int' |t= 'str' |t= 'bool' )
            int alt3=3;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt3=1;
                }
                break;
            case 30:
                {
                alt3=2;
                }
                break;
            case 24:
                {
                alt3=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:47:5: t= 'int'
                    {
                    t=(Token)match(input,29,FOLLOW_29_in_type265); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new nl.cwi.swat.liveql.ast.types.Int(t.getLine()); }

                    }
                    break;
                case 2 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:48:5: t= 'str'
                    {
                    t=(Token)match(input,30,FOLLOW_30_in_type275); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new nl.cwi.swat.liveql.ast.types.Str(t.getLine()); }

                    }
                    break;
                case 3 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:49:5: t= 'bool'
                    {
                    t=(Token)match(input,24,FOLLOW_24_in_type285); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new nl.cwi.swat.liveql.ast.types.Bool(t.getLine()); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, type_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "type"



    // $ANTLR start "primary"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:52:1: primary returns [Expr result] : ( Int | Ident | Str | bool | '(' x= orExpr ')' );
    public final Expr primary() throws RecognitionException {
        Expr result = null;

        int primary_StartIndex = input.index();

        Token Int3=null;
        Token Ident4=null;
        Token Str5=null;
        Expr x =null;

        Expr bool6 =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:53:3: ( Int | Ident | Str | bool | '(' x= orExpr ')' )
            int alt4=5;
            switch ( input.LA(1) ) {
            case Int:
                {
                alt4=1;
                }
                break;
            case Ident:
                {
                alt4=2;
                }
                break;
            case Str:
                {
                alt4=3;
                }
                break;
            case 26:
            case 31:
                {
                alt4=4;
                }
                break;
            case 12:
                {
                alt4=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:53:5: Int
                    {
                    Int3=(Token)match(input,Int,FOLLOW_Int_in_primary306); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Int(Integer.parseInt((Int3!=null?Int3.getText():null)), Int3.getLine()); }

                    }
                    break;
                case 2 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:54:5: Ident
                    {
                    Ident4=(Token)match(input,Ident,FOLLOW_Ident_in_primary316); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Ident((Ident4!=null?Ident4.getText():null), Ident4.getLine()); }

                    }
                    break;
                case 3 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:55:5: Str
                    {
                    Str5=(Token)match(input,Str,FOLLOW_Str_in_primary324); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Str((Str5!=null?Str5.getText():null), Str5.getLine()); }

                    }
                    break;
                case 4 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:56:5: bool
                    {
                    pushFollow(FOLLOW_bool_in_primary334);
                    bool6=bool();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = bool6; }

                    }
                    break;
                case 5 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:57:5: '(' x= orExpr ')'
                    {
                    match(input,12,FOLLOW_12_in_primary343); if (state.failed) return result;

                    pushFollow(FOLLOW_orExpr_in_primary347);
                    x=orExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,13,FOLLOW_13_in_primary349); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = x; }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, primary_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "primary"



    // $ANTLR start "bool"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:60:1: bool returns [Expr result] : (t= 'true' |t= 'false' );
    public final Expr bool() throws RecognitionException {
        Expr result = null;

        int bool_StartIndex = input.index();

        Token t=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:61:3: (t= 'true' |t= 'false' )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==31) ) {
                alt5=1;
            }
            else if ( (LA5_0==26) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:61:5: t= 'true'
                    {
                    t=(Token)match(input,31,FOLLOW_31_in_bool371); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Bool(true, t.getLine()); }

                    }
                    break;
                case 2 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:62:5: t= 'false'
                    {
                    t=(Token)match(input,26,FOLLOW_26_in_bool382); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Bool(false, t.getLine()); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, bool_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "bool"



    // $ANTLR start "unExpr"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:65:1: unExpr returns [Expr result] : ( '+' x= unExpr | '-' x= unExpr | '!' x= unExpr |x= primary );
    public final Expr unExpr() throws RecognitionException {
        Expr result = null;

        int unExpr_StartIndex = input.index();

        Expr x =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:66:5: ( '+' x= unExpr | '-' x= unExpr | '!' x= unExpr |x= primary )
            int alt6=4;
            switch ( input.LA(1) ) {
            case 15:
                {
                alt6=1;
                }
                break;
            case 16:
                {
                alt6=2;
                }
                break;
            case 9:
                {
                alt6=3;
                }
                break;
            case Ident:
            case Int:
            case Str:
            case 12:
            case 26:
            case 31:
                {
                alt6=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:66:8: '+' x= unExpr
                    {
                    match(input,15,FOLLOW_15_in_unExpr408); if (state.failed) return result;

                    pushFollow(FOLLOW_unExpr_in_unExpr412);
                    x=unExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Pos(x); }

                    }
                    break;
                case 2 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:67:8: '-' x= unExpr
                    {
                    match(input,16,FOLLOW_16_in_unExpr423); if (state.failed) return result;

                    pushFollow(FOLLOW_unExpr_in_unExpr427);
                    x=unExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Neg(x); }

                    }
                    break;
                case 3 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:68:8: '!' x= unExpr
                    {
                    match(input,9,FOLLOW_9_in_unExpr438); if (state.failed) return result;

                    pushFollow(FOLLOW_unExpr_in_unExpr442);
                    x=unExpr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Not(x); }

                    }
                    break;
                case 4 :
                    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:69:8: x= primary
                    {
                    pushFollow(FOLLOW_primary_in_unExpr455);
                    x=primary();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = x; }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 8, unExpr_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "unExpr"



    // $ANTLR start "mulExpr"
    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:72:1: mulExpr returns [Expr result] : lhs= unExpr (op= ( '*' | '/' ) rhs= unExpr )* ;
    public final Expr mulExpr() throws RecognitionException {
        Expr result = null;

        int mulExpr_StartIndex = input.index();

        Token op=null;
        Expr lhs =null;

        Expr rhs =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return result; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:73:5: (lhs= unExpr (op= ( '*' | '/' ) rhs= unExpr )* )
            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:73:9: lhs= unExpr (op= ( '*' | '/' ) rhs= unExpr )*
            {
            pushFollow(FOLLOW_unExpr_in_mulExpr493);
            lhs=unExpr();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result =lhs; }

            // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:73:45: (op= ( '*' | '/' ) rhs= unExpr )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==14||LA7_0==17) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /Users/tvdstorm/CWI/LiveQL/src/nl/cwi/swat/liveql/parser/antlr/QL.g:73:47: op= ( '*' | '/' ) rhs= unExpr
            	    {
            	    op=(Token)input.LT(1);

            	    if ( input.LA(1)==14||input.LA(1)==17 ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	        state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return result;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_unExpr_in_mulExpr513);
            	    rhs=unExpr();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { 
            	          if ((op!=null?op.getText():null).equals("*")) {
            	            result = new Mul(result, rhs);
            	          }
            	          if ((op!=null?op.getText():null).equals("<=")) {
            	            result = new Div(result, rhs);      
            	          }
            	        }

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }
